# interaction-to-intent

./: Makefile  README.md  config.yaml  pyproject.toml
results/: REFERENCE.md
scripts/: evaluate.py  plot_confusion.py  plot_dataset_summary.py  plot_session_composition.py  prepare_features.py  prepare_sequences.py  run_ablations.py  train_stage1_bigru.py  train_stage1_xgboost.py  train_stage2_unigru.py
src/: __init__.py  compose.py  constants.py  data.py  datasets.py  metrics.py  training.py
src/features/: __init__.py  common.py  stateless.py  summary.py  temporal.py
src/models/: bigru.py  stage2.py
