[project]
name = "hover2intent"
version = "0.1.0"
description = "Inferring user intent from hover interactions on DR scatterplots"
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "xgboost>=2.0",
    "TorchCRF>=1.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*"]
